force-app/main/default/objects/GoalItem__c/GoalItem__c.object-meta.xml
<CustomObject>
    <label>Item Da Meta</label>
    <nameField>
        <label>Item Da Meta Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itens Das Metas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>