force-app/main/default/objects/GoalItem__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>Meta</label>
    <referenceTo>Goal__c</referenceTo>
    <relationshipLabel>Itens Das Metas</relationshipLabel>
    <relationshipName>Itens_Das_Metas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>