force-app/main/default/objects/GoalItem__c/fields/Goal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Goal_Amount__c</fullName>
    <label>Valor Da Meta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>