force-app/main/default/objects/GoalItem__c/fields/Goal_Comission_Percent__c.field-meta.xml
<CustomField>
    <fullName>Goal_Comission_Percent__c</fullName>
    <label>Porcentagem De Comissão Da Meta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>