force-app/main/default/objects/GoalItem__c/fields/Goal_Condition_Payment__c.field-meta.xml
<CustomField>
    <fullName>Goal_Condition_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condição De Pagamento Da Meta</label>
    <referenceTo>Goal_Condition_Payment__c</referenceTo>
    <relationshipLabel>Itens Das Metas</relationshipLabel>
    <relationshipName>Itens_Das_Metas</relationshipName>
    <type>Lookup</type>
</CustomField>