force-app/main/default/objects/GoalItem__c/fields/Goal_Product__c.field-meta.xml
<CustomField>
    <fullName>Goal_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto Da Meta</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Itens Das Metas</relationshipLabel>
    <relationshipName>Itens_Das_Metas</relationshipName>
    <type>Lookup</type>
</CustomField>