force-app/main/default/objects/GoalItem__c/fields/Negotiated_Value__c.field-meta.xml
<CustomField>
    <fullName>Negotiated_Value__c</fullName>
    <label>Valor Negociado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>