force-app/main/default/objects/GoalItem__c/fields/Percentage_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Achieved__c</fullName>
    <label>Porcentagem Atingida</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>