force-app/main/default/objects/GoalItem__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Familia De Produto</label>
    <referenceTo>Product_Family__c</referenceTo>
    <relationshipLabel>Itens Das Metas</relationshipLabel>
    <relationshipName>Itens_Das_Metas</relationshipName>
    <type>Lookup</type>
</CustomField>