force-app/main/default/objects/GoalItem__c/fields/Projected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Projected_Amount__c</fullName>
    <label>Valor Projetado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>