force-app/main/default/objects/GoalItem__c/recordTypes/Payment_Condition.recordType-meta.xml
<RecordType>
    <fullName>Payment_Condition</fullName>
    <active>true</active>
    <label>Condição de Pagamento</label>
</RecordType>