force-app/main/default/objects/GoalItem__c/recordTypes/Performance.recordType-meta.xml
<RecordType>
    <fullName>Performance</fullName>
    <active>true</active>
    <label>Performance</label>
</RecordType>