force-app/main/default/objects/GoalItem__c/recordTypes/Product.recordType-meta.xml
<RecordType>
    <fullName>Product</fullName>
    <active>true</active>
    <label>Produto</label>
</RecordType>