force-app/main/default/objects/GoalItem__c/recordTypes/Product_Family.recordType-meta.xml
<RecordType>
    <fullName>Product_Family</fullName>
    <active>true</active>
    <label>Família de produto</label>
</RecordType>